--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         "issues": "https://github.com/sebastianbergmann/dbunit/issues"
     },
     "require": {
-        "php": "^7.1",
-        "phpunit/phpunit": "^7.0",
-        "symfony/yaml": "^3.0 || ^4.0",
+        "php": ">=7.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/yaml": "^5.4",
         "ext-pdo": "*",
         "ext-simplexml": "*"
     },
