--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": ">=7.4",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^7.5|^9.5",
         "symfony/yaml": "^5.4",
         "ext-pdo": "*",
         "ext-simplexml": "*"
