--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=7.4",
         "phpunit/phpunit": "^7.5|^9.5",
-        "symfony/yaml": "^5",
+        "symfony/yaml": "^5|^6",
         "ext-pdo": "*",
         "ext-simplexml": "*"
     },
