--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "issues": "https://github.com/sebastianbergmann/dbunit/issues"
     },
     "require": {
-        "php": ">=7.4",
+        "php": "^8.1",
         "phpunit/phpunit": "^7.5|^9.5",
         "symfony/yaml": "^5|^6",
         "ext-pdo": "*",
