--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "issues": "https://github.com/sebastianbergmann/dbunit/issues"
     },
     "require": {
-        "php": "^8.1",
-        "phpunit/phpunit": "^7.5|^9.5",
+        "php": "^8.3",
+        "phpunit/phpunit": "^7.5|^9.5|^10|^11",
         "symfony/yaml": "^5|^6",
         "ext-pdo": "*",
         "ext-simplexml": "*"
