--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^8.3",
         "phpunit/phpunit": "^7.5|^9.5|^10|^11",
-        "symfony/yaml": "^5|^6",
+        "symfony/yaml": "^5|^6|^7",
         "ext-pdo": "*",
         "ext-simplexml": "*"
     },
